# libgui-loom

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
extras/Services/WindowServer/: ScreenLayout.ipp
patches/: ioctl.patch
src/: CMakeLists.txt
src/Loom/: CMakeLists.txt  ClipboardConnectionProxy.cpp  ClipboardConnectionProxy.h  IPCBridge.cpp  IPCBridge.h  WindowServerConnectionProxy.cpp  WindowServerConnectionProxy.h  main.mm
src/Loom/AppKit/: Application.h  Application.mm  ApplicationDelegate.h  ApplicationDelegate.mm  Conversions.h  Conversions.mm  EventLoopImplementation.h  EventLoopImplementation.mm  ScreenLayout.mm  WindowController.h  WindowController.mm  WindowServerCallbacksMacOS.h  WindowServerCallbacksMacOS.mm  main.mm
src/examples/: CMakeLists.txt
src/examples/basic-app/: CMakeLists.txt  main.cpp
